--- a/css/index.css
+++ b/css/index.css
@@ -161,7 +161,7 @@ body {
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 160%;
+  top: 1380px;
   transform: translate(-50%, 0%);
 }
 .attribution a {
