--- a/css/sass/_attribution.scss
+++ b/css/sass/_attribution.scss
@@ -3,7 +3,7 @@
     text-align: center;
     position: absolute;
     left: 50%;
-    top: 160%; 
+    top: 1380px; 
     transform: translate(-50%, 0%);
     a { 
         color: hsl(228, 45%, 44%);
