--- a/css/index.css
+++ b/css/index.css
@@ -150,23 +150,24 @@ body {
     width: 333px;
     grid-template-rows: 10% 25% 45% 25%;
   }
-
-  .attribution {
-    display: block;
-    top: 100%;
-  }
 }
 .attribution {
   font-size: 16px;
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 1380px;
+  top: 95%;
   transform: translate(-50%, 0%);
 }
 .attribution a {
   color: #3e52a3;
   font-size: 16px;
+}
+
+@media screen and (max-width: 1001px) {
+  .attribution {
+    top: 1400px;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
