--- a/css/sass/_attribution.scss
+++ b/css/sass/_attribution.scss
@@ -3,11 +3,17 @@
     text-align: center;
     position: absolute;
     left: 50%;
-    top: 1380px; 
+    top: 95%; 
     transform: translate(-50%, 0%);
     a { 
         color: hsl(228, 45%, 44%);
         font-size: 16px;
     }
 }
+@media screen and (max-width: 1001px){
+    .attribution {
+        top: 1400px;
+}
+}
+
  
