--- a/css/sass/_global.scss
+++ b/css/sass/_global.scss
@@ -9,13 +9,21 @@ $Font-main: 'Lexend Deca', sans-serif;
 $Font-title: 'Big Shoulders Display', sans-serif;
 
 @mixin card {
-    width: 333px;
+    min-width: 333px;
+    max-width: 100%;
     height: 500px;
     padding: 35px 45px;
     display: grid;
     grid-template-rows: 10% 18% 45% 25%;
     @media screen and (max-width: 1001px){
         height: 400px;
+        grid-template-rows: 10% 18% 35% 30%;
+        span{
+            margin: 15px 0 0 0;
+        }
+        button{
+            margin: 10px 0 50px 0;
+        }
     }
     h1{
         font-size: 25px;
