--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,7 @@ body {
 
   .target {
     flex-direction: column;
+    align-items: center;
     margin: 60px auto;
     width: 70%;
     grid-template-rows: 10% 25% 45% 25%;
